--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
 <meta charset="utf-8">
 <head>
   <title>Pokemón</title>
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+  <style type="text/css"> 
+body { 
+color: white; 
+background-color: #d8da3d;
+font-family: 'Open Sans', sans-serif; 
+} 
+</style> 
 </head>
 <body align: center>
   <div>
@@ -10,8 +18,9 @@
   </div>
 
 <center>
-<img src="banner.jpg" width="500" height="200">
-<h4> Selecciona tu Pokemón </h4>
+<a href="http://s385.photobucket.com/user/adamw2008/media/PokemonBannerNew.png.html" target="_blank"><img src="http://i385.photobucket.com/albums/oo300/adamw2008/PokemonBannerNew.png" border="0" alt=" photo PokemonBannerNew.png" width="600" height="200"/></a>
+
+<h1> Selecciona tu Pokemón </h1>
 
 <select name="opcion1" id="opcion1">
   <option value="Pikachu">Pikachu</option>
