--- a/index.html
+++ b/index.html
@@ -5,11 +5,60 @@
   <title>Pokemón</title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   <style type="text/css"> 
-body { 
-color: white; 
-background-color: #d8da3d;
-font-family: 'Open Sans', sans-serif; 
-} 
+
+    body { 
+      color: white; 
+      background-color: #08c6ff;
+      font-family: 'Open Sans', sans-serif; 
+    } 
+
+    select{
+      border: 1px solid #DBE1EB;
+      font-size: 18px;
+      font-family: Arial, Verdana;
+      padding-left: 7px;
+      padding-right: 7px;
+      padding-top: 5px;
+      padding-bottom: 5px;
+      border-radius: 4px;
+      -moz-border-radius: 4px;
+      -webkit-border-radius: 4px;
+      -o-border-radius: 4px;
+      background: #4972B5;
+      background: linear-gradient(left, #4972B5, #618ACB);
+      background: -moz-linear-gradient(left, #4972B5, #618ACB);
+      background: -webkit-linear-gradient(left, #4972B5, #618ACB);
+      background: -o-linear-gradient(left, #4972B5, #618ACB);
+      color: #FFFFFF;
+    }
+
+
+    button{
+      border: 1px solid #DBE1EB;
+      font-size: 18px;
+      font-family: Arial, Verdana;
+      padding-left: 7px;
+      padding-right: 7px;
+      padding-top: 5px;
+      padding-bottom: 5px;
+      border-radius: 4px;
+      -moz-border-radius: 4px;
+      -webkit-border-radius: 4px;
+      -o-border-radius: 4px;
+      background: #4972B5;
+      background: linear-gradient(left, #4972B5, #618ACB);
+      background: -moz-linear-gradient(left, #4972B5, #618ACB);
+      background: -webkit-linear-gradient(left, #4972B5, #618ACB);
+      background: -o-linear-gradient(left, #4972B5, #618ACB);
+      color: #FFFFFF;
+    }
+
+    #base{
+      color: #063375;
+      font-weight: bold;
+      font-size: 18px;
+    }
+    
 </style> 
 </head>
 <body align: center>
@@ -43,11 +92,11 @@ font-family: 'Open Sans', sans-serif;
 <div id="base"><br></div>
 <br>
 
-<img src="img/Pokeball.png" width="150" height="150">
+<img src="batalla.jpg" width="250" height="150">
 </center>
 
 
 
-<script type="text/javascript" src="assets/ejercicioguiado.js"></script>
+<script type="text/javascript" src="assets/js/javascript.js"></script>
 </body>
 </html>
